[project]
name = "furst-paper-correction"
version = "0.1.0"
description = "Fürst paper correction analysis"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.2",
    "polars>=1.25",
    "pyarrow>=19.0",
    "psutil>=7.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1",
    "isort>=6.0",
    "mypy>=1.15",
    "pylint>=3.3",
    "pytest>=8.3",
]

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 131

[tool.black]
line-length = 131

[tool.mypy]
exclude = "build"
explicit_package_bases = true
strict = true
disallow_untyped_defs = false

[tool.pylint.MASTER]
max-line-length = 131

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "broad-exception-caught",
    "broad-exception-raised",
    "logging-fstring-interpolation",
    "logging-not-lazy",
]

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.DESIGN]
max-attributes = 10
