[project]
name = "furst-paper-correction"
version = "0.1.0"
description = "Fürst paper correction analysis"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10",
    "numpy>=2.2",
    "polars>=1.25",
    "pyarrow>=19.0",
    "psutil>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "ty>=0.0.20",
    "pytest>=8.3",
]

[tool.ruff]
target-version = "py313"
line-length = 131
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PL", "RUF"]
extend-ignore = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
